--- a/_data/events.yml
+++ b/_data/events.yml
@@ -27,7 +27,7 @@
   start_time: 2017-09-12
   end_time: 2017-09-13
   funnel: https://fragments.talkfunnel.com/2017/
-  blurb: Fragments is our new conference on the mobile ecosystem in India. We’ve been organising droidconIN since 2011, but have realised that we need to broaden the scope of the conference beyond Android to reflect how modern mobile development is done. Fragments aims to bring together professionals working across the spectrum of mobile applications. Whether Android, iOS, mobile websites, or progressive web apps.
+  blurb: Fragments is our new conference on the mobile ecosystem in India. Fragments aims to bring together professionals working across the spectrum of mobile applications. Whether Android, iOS, mobile websites, or progressive web apps.
 
 - name: reactfoo-2017
   title: ReactFoo 2017
