--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - ruby-head
 before_script:
-  - pip install -r requirements.txt
+  - pip install --user -r requirements.txt
   - bundle update
 script:
   - bundle exec jekyll build
