--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 collections:
   hg_events:
     output: false
-
+timezone: Asia/Calcutta
 webrick:
   headers:
     Access-Control-Allow-Origin: '*'
