Update events.yml (#2)

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -15,3 +15,12 @@
   end_time: 2017-05-28 10:00
   url: https://blog.kilter.in/kilter-picnic-2-98f50058b8fc
   blurb: Let’s enjoy a Kilter morning in the park. Invite your friends and bring the kids; this picnic is what you make it. You can discuss habit formation, trade recipes, stretch, or get active with other Kilterers. The slackline group meets nearby, so stay a while and play with them, too.
+  
+- name: open-house-inclusive-spaces
+  title: Open House on building inclusive spaces
+  city: Bangalore
+  venue: HasGeek House
+  start_time: 2017-05-26 19:00
+  end_time: 2017-05-26 21:00
+  url: https://www.facebook.com/events/1694671104175474/
+  blurb: In an era where AI and virtual reality would be the next big truth, how do we make sure that this future is inclusive and reflective of everyone's realities? Joining us on Friday to talk more about this is Jasmine from Hidden Pockets.
