--- a/_data/events.yml
+++ b/_data/events.yml
@@ -24,3 +24,12 @@
   end_time: 2017-06-02 21:00
   url: https://www.facebook.com/events/1694671104175474/
   blurb: In an era where AI and virtual reality would be the next big truth, how do we make sure that this future is inclusive and reflective of everyone's realities? Joining us on Friday to talk more about this is Jasmine from Hidden Pockets.
+
+- name: open-house-engineering-design
+  title: Open House on engineering for good design
+  city: Bangalore
+  venue: HasGeek House
+  start_time: 2017-06-09 19:00
+  end_time: 2017-06-09 21:00
+  url: https://www.facebook.com/events/1578118532239183/
+  blurb: Engineering involves crafting great user experiences for customers. For this week's open house, we have Mario Stallone, who works on front-end at Myntra. 
