Added freeCodeCamp meetup event

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -33,3 +33,12 @@
   end_time: 2017-06-09 21:00
   url: https://www.facebook.com/events/1578118532239183/
   blurb: Engineering involves crafting great user experiences for customers. For this week's open house, we have Mario Stallone, who works on front-end at Myntra. 
+
+- name: freecodecamp-bengaluru
+  title: "freeCodeCamp Bengaluru #2"
+  city: Bangalore
+  venue: 91springboard, near The Forum Mall, Koramangala.
+  start_time: 2017-06-11 15:00
+  end_time: 2017-06-11 19:30
+  url: https://www.facebook.com/groups/free.code.camp.bengaluru/
+  blurb: FreeCodeCamp is a world-wide community of people who learn to code using open source software. People can join the community to start solving problems, complete challenges and earn certifications. The meetup will focus on helping people learn web technologies and pair-program on cool projects.
