--- a/_data/events.yml
+++ b/_data/events.yml
@@ -37,7 +37,7 @@
 - name: freecodecamp-bengaluru
   title: "freeCodeCamp Bengaluru #2"
   city: Bangalore
-  venue: 91springboard, near The Forum Mall, Koramangala.
+  venue: 91springboard, Koramangala.
   start_time: 2017-06-11 15:00
   end_time: 2017-06-11 19:30
   url: https://www.facebook.com/groups/free.code.camp.bengaluru/
